Fix option label spacing

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -85,6 +85,7 @@
 
 .questionLabel, .optionLabel {
   width: 5em;
+  padding-right: 5px;
 }
 
 .optionLabel {
